# brukerapi-python

./: .coveragerc  .gitignore  .readthedocs.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: publish-pypi.yml  python-ci.yml  ruff.yml
.github/workflows/assets/: zenodo.json  zenodo.py
.run/: bruker filter #VisuAcqSequenceName=='_Bruker_FLASH_' .run.xml  bruker filter '_FG_ISA_' in @dim_type.run.xml  bruker report TE and TR to yml.run.xml  bruker report dataset to file.run.xml  bruker report study to folder.run.xml  report study in-place.run.xml  test_pv_51.run.xml  test_pv_601.run.xml  test_pv_700.run.xml
brukerapi/: __init__.py  cli.py  data.py  dataset.py  exceptions.py  fid_schemes.json  filters.py  folders.py  jcampdx.py  mergers.py  ontology.py  schemas.py  schemes.py  splitters.py  study.py  utils.py
brukerapi/config/: properties_2dseq_core.json  properties_2dseq_custom.json  properties_fid_core.json  properties_fid_custom.json  properties_rawdata_core.json  properties_rawdata_custom.json  properties_traj_core.json  schema_2dseq_core.json  schema_2dseq_custom.json  schema_fid_core.json  schema_fid_custom.json  schema_rawdata_core.json
brukerapi/tests/: test_dataset.json  test_dataset.py  test_dataset_qa.json  test_jcampdx.json  test_jcampdx.py  test_jcampdx_qa.json  test_jcampdx_qa.py  test_random_access.py  test_random_access_qa.json  test_split_qa.json  test_split_qa.py
docs/: requirements.txt
docs/source/: brukerapi.rst  cli.rst  compatibility.rst  conf.py  dataset.rst  folders.rst  index.rst  jcampdx.rst  modules.rst  schemas.rst  schemes.rst  test_data.rst
docs/source/tutorials/: how-to-2dseq.rst  how-to-fid.rst  how-to-jcampdx.rst  how-to-study.rst  how-to-use-filter.rst  installation.rst
examples/: acqp  cli_report.sh  demo.py  filter.ipynb  method  read_2dseq.ipynb  read_fid.ipynb  split_demo.ipynb  split_fg_echo.ipynb  split_fg_isa_demo.ipynb  split_sp_demo.ipynb
test/: auto_test_generator.py  conftest.py  demo.py  pytest.ini  test_dataset.py  test_exceptions.py  test_folders.py  test_jcampdx.py  test_property_configs.py  test_random_access.py  test_rawdata.py  test_split.py  test_trajectory.py
test/config/: auto_test_pv51.json  auto_test_pv601.json  auto_test_qa.json  properties_0.2H2.json  properties_20200612_094625_lego_phantom_3_1_2.json  properties_20210128_122257_LEGO_PHANTOM_API_TEST_1_1.json  properties_PV360_StdData.json  test_config_pv51.json  test_config_pv601.json  test_config_qa.json
